# asusctl

asus-notify/src/: main.rs
daemon/: Cargo.toml
daemon-user/src/: ctrl_anime.rs
daemon/src/: ctrl_charge.rs  ctrl_rog_bios.rs  ctrl_supported.rs  daemon.rs  lib.rs
daemon/src/ctrl_anime/: mod.rs  zbus.rs
daemon/src/ctrl_aura/: controller.rs  zbus.rs
daemon/src/ctrl_profiles/: zbus.rs
rog-aura/src/: builtin_modes.rs
rog-dbus/src/: lib.rs  zbus_charge.rs  zbus_led.rs  zbus_profile.rs  zbus_rogbios.rs  zbus_supported.rs
